@@ -1,5 +1,7 @@
 package nl.ramsolutions.sw.magik.languageserver.typehierarchy;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import java.net.URI;
 import java.util.Collections;
 import java.util.List;
@@ -14,152 +16,127 @@ import org.eclipse.lsp4j.SymbolKind;
 import org.eclipse.lsp4j.TypeHierarchyItem;
 import org.junit.jupiter.api.Test;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-/**
- * Tests for TypeHierarchyProvider.
- */
+/** Tests for TypeHierarchyProvider. */
 class TypeHierarchyProviderTest {
 
-    private static final URI TEST_URI = URI.create("tests://unittest");
+  private static final URI TEST_URI = URI.create("tests://unittest");
 
-    private List<TypeHierarchyItem> getPrepareTypeHierarchy(
-            final String code,
-            final Position position,
-            final IDefinitionKeeper definitionKeeper) {
-        final MagikTypedFile magikFile = new MagikTypedFile(TEST_URI, code, definitionKeeper);
-        final TypeHierarchyProvider provider = new TypeHierarchyProvider(definitionKeeper);
-        return provider.prepareTypeHierarchy(magikFile, position);
-    }
+  private List<TypeHierarchyItem> getPrepareTypeHierarchy(
+      final String code, final Position position, final IDefinitionKeeper definitionKeeper) {
+    final MagikTypedFile magikFile = new MagikTypedFile(TEST_URI, code, definitionKeeper);
+    final TypeHierarchyProvider provider = new TypeHierarchyProvider(definitionKeeper);
+    return provider.prepareTypeHierarchy(magikFile, position);
+  }
 
-    @Test
-    void testPrepareTypeHierarchyMethodDefinitionExemplarName() {
-        final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
-        final TypeString exemplarRef = TypeString.ofIdentifier("exemplar", "user");
-        definitionKeeper.add(
-            new ExemplarDefinition(
-                null,
-                null,
-                null,
-                null,
-                ExemplarDefinition.Sort.SLOTTED,
-                exemplarRef,
-                Collections.emptyList(),
-                Collections.emptyList()));
+  @Test
+  void testPrepareTypeHierarchyMethodDefinitionExemplarName() {
+    final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
+    final TypeString exemplarRef = TypeString.ofIdentifier("exemplar", "user");
+    definitionKeeper.add(
+        new ExemplarDefinition(
+            null,
+            null,
+            null,
+            null,
+            ExemplarDefinition.Sort.SLOTTED,
+            exemplarRef,
+            Collections.emptyList(),
+            Collections.emptyList()));
 
-        final String code = ""
-            + "_method exemplar.method\n"
-            + "_endmethod\n";
-        final Position position = new Position(0, 10);    // On 'exemplar'.
+    final String code = "" + "_method exemplar.method\n" + "_endmethod\n";
+    final Position position = new Position(0, 10); // On 'exemplar'.
 
-        final List<TypeHierarchyItem> items = this.getPrepareTypeHierarchy(code, position, definitionKeeper);
-        assertThat(items)
-            .isNotNull()
-            .hasSize(1);
-    }
+    final List<TypeHierarchyItem> items =
+        this.getPrepareTypeHierarchy(code, position, definitionKeeper);
+    assertThat(items).isNotNull().hasSize(1);
+  }
 
-    @Test
-    void testPrepareTypeHierarchyGlobal() {
-        final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
-        final TypeString ropeRef = TypeString.ofIdentifier("rope", "sw");
-        definitionKeeper.add(
-            new ExemplarDefinition(
-                null,
-                null,
-                null,
-                null,
-                ExemplarDefinition.Sort.SLOTTED,
-                ropeRef,
-                Collections.emptyList(),
-                Collections.emptyList()));
+  @Test
+  void testPrepareTypeHierarchyGlobal() {
+    final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
+    final TypeString ropeRef = TypeString.ofIdentifier("rope", "sw");
+    definitionKeeper.add(
+        new ExemplarDefinition(
+            null,
+            null,
+            null,
+            null,
+            ExemplarDefinition.Sort.SLOTTED,
+            ropeRef,
+            Collections.emptyList(),
+            Collections.emptyList()));
 
-        final String code = ""
-            + "_method exemplar.method\n"
-            + "  rope.new()\n"
-            + "_endmethod\n";
-        final Position position = new Position(1, 4);    // On 'rope'.
+    final String code = "" + "_method exemplar.method\n" + "  rope.new()\n" + "_endmethod\n";
+    final Position position = new Position(1, 4); // On 'rope'.
 
-        final List<TypeHierarchyItem> items = this.getPrepareTypeHierarchy(code, position, definitionKeeper);
-        assertThat(items)
-            .isNotNull()
-            .hasSize(1);
-    }
+    final List<TypeHierarchyItem> items =
+        this.getPrepareTypeHierarchy(code, position, definitionKeeper);
+    assertThat(items).isNotNull().hasSize(1);
+  }
 
-    @Test
-    void testGetSubtypes() {
-        final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
-        final TypeString exemplarRef = TypeString.ofIdentifier("exemplar", "user");
-        definitionKeeper.add(
-            new ExemplarDefinition(
-                null,
-                null,
-                null,
-                null,
-                ExemplarDefinition.Sort.SLOTTED,
-                exemplarRef,
-                Collections.emptyList(),
-                Collections.emptyList()));
-        final TypeString subExemplarRef = TypeString.ofIdentifier("sub_exemplar", "user");
-        definitionKeeper.add(
-            new ExemplarDefinition(
-                null,
-                null,
-                null,
-                null,
-                ExemplarDefinition.Sort.SLOTTED,
-                subExemplarRef,
-                Collections.emptyList(),
-                List.of(exemplarRef)));
+  @Test
+  void testGetSubtypes() {
+    final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
+    final TypeString exemplarRef = TypeString.ofIdentifier("exemplar", "user");
+    definitionKeeper.add(
+        new ExemplarDefinition(
+            null,
+            null,
+            null,
+            null,
+            ExemplarDefinition.Sort.SLOTTED,
+            exemplarRef,
+            Collections.emptyList(),
+            Collections.emptyList()));
+    final TypeString subExemplarRef = TypeString.ofIdentifier("sub_exemplar", "user");
+    definitionKeeper.add(
+        new ExemplarDefinition(
+            null,
+            null,
+            null,
+            null,
+            ExemplarDefinition.Sort.SLOTTED,
+            subExemplarRef,
+            Collections.emptyList(),
+            List.of(exemplarRef)));
 
-        final TypeHierarchyItem item = new TypeHierarchyItem(
-            "user:exemplar",
-            SymbolKind.Class,
-            TEST_URI.toString(),
-            new Range(),
-            new Range());
-        final TypeHierarchyProvider provider = new TypeHierarchyProvider(definitionKeeper);
-        final List<TypeHierarchyItem> subTypes = provider.typeHierarchySubtypes(item);
-        assertThat(subTypes)
-            .isNotNull()
-            .hasSize(1);
-        final TypeHierarchyItem subType = subTypes.get(0);
-        assertThat(subType.getName()).isEqualTo("user:sub_exemplar");
-        assertThat(subType.getKind()).isEqualTo(SymbolKind.Class);
-        assertThat(subType.getUri()).isEqualTo(TEST_URI.toString());
-    }
+    final TypeHierarchyItem item =
+        new TypeHierarchyItem(
+            "user:exemplar", SymbolKind.Class, TEST_URI.toString(), new Range(), new Range());
+    final TypeHierarchyProvider provider = new TypeHierarchyProvider(definitionKeeper);
+    final List<TypeHierarchyItem> subTypes = provider.typeHierarchySubtypes(item);
+    assertThat(subTypes).isNotNull().hasSize(1);
+    final TypeHierarchyItem subType = subTypes.get(0);
+    assertThat(subType.getName()).isEqualTo("user:sub_exemplar");
+    assertThat(subType.getKind()).isEqualTo(SymbolKind.Class);
+    assertThat(subType.getUri()).isEqualTo(TEST_URI.toString());
+  }
 
-    @Test
-    void testGetSupertypes() {
-        final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
-        final TypeString exemplarRef = TypeString.ofIdentifier("exemplar", "user");
-        definitionKeeper.add(
-            new ExemplarDefinition(
-                null,
-                null,
-                null,
-                null,
-                ExemplarDefinition.Sort.SLOTTED,
-                exemplarRef,
-                Collections.emptyList(),
-                List.of(
-                    TypeString.ofIdentifier("slotted_format_mixin", "sw"))));
+  @Test
+  void testGetSupertypes() {
+    final IDefinitionKeeper definitionKeeper = new DefinitionKeeper();
+    final TypeString exemplarRef = TypeString.ofIdentifier("exemplar", "user");
+    definitionKeeper.add(
+        new ExemplarDefinition(
+            null,
+            null,
+            null,
+            null,
+            ExemplarDefinition.Sort.SLOTTED,
+            exemplarRef,
+            Collections.emptyList(),
+            List.of(TypeString.ofIdentifier("slotted_format_mixin", "sw"))));
 
-        final TypeHierarchyItem item = new TypeHierarchyItem(
-            "user:exemplar",
-            SymbolKind.Class,
-            TEST_URI.toString(),
-            new Range(),
-            new Range());
+    final TypeHierarchyItem item =
+        new TypeHierarchyItem(
+            "user:exemplar", SymbolKind.Class, TEST_URI.toString(), new Range(), new Range());
 
-        final TypeHierarchyProvider provider = new TypeHierarchyProvider(definitionKeeper);
-        final List<TypeHierarchyItem> superTypes = provider.typeHierarchySupertypes(item);
-        assertThat(superTypes)
-            .isNotNull()
-            .hasSize(1);
-        final TypeHierarchyItem superType = superTypes.get(0);
-        assertThat(superType.getName()).isEqualTo("sw:slotted_format_mixin");
-        assertThat(superType.getKind()).isEqualTo(SymbolKind.Class);
-        assertThat(superType.getUri()).isEqualTo(TEST_URI.toString());
-    }
-
+    final TypeHierarchyProvider provider = new TypeHierarchyProvider(definitionKeeper);
+    final List<TypeHierarchyItem> superTypes = provider.typeHierarchySupertypes(item);
+    assertThat(superTypes).isNotNull().hasSize(1);
+    final TypeHierarchyItem superType = superTypes.get(0);
+    assertThat(superType.getName()).isEqualTo("sw:slotted_format_mixin");
+    assertThat(superType.getKind()).isEqualTo(SymbolKind.Class);
+    assertThat(superType.getUri()).isEqualTo(TEST_URI.toString());
+  }
 }
